# CustomMayaTool

./: LICENSE  README.md  pyproject.toml
.github/workflows/: release_to_testpypi.yml  仅构建.yml  测试构建package.yml
CustomMT/: job_manager.py  menu_builder.py
samples/menubuildersamples/: sample1.py  test_mel.mel
samples/scriptjobmanagersamples/: sample1.py  sample2.py  scriptjobmanager.py
src/CustomMT/: menu_builder.py
src/CustomMT/common/: __init__.py  menu.py  transform.py  ui.py  window.py
src/CustomMT/commonext/: scriptjob_manager.py
src/CustomMT/tools/check_tool_widget/: main_widget.py  test.py  test_main_window.py
src/samples/scriptjobmanagersamples/: sample1.py  sample2.py  scriptjobmanager.py
