[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CustomMayaTool"
version = "0.0.1"
description = "A custom tool for Maya to enhance productivity"
authors = [
    { name = "qiao yuanzhen", email = "narutozbjp@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []
