[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CustomMayaTool"
version = "0.0.4"
description = "A custom tool for Maya to enhance productivity"
authors = [
    { name = "qiao yuanzhen", email = "narutozbjp@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = 'MIT'
dependencies = []


[tool.setuptools.packages.find]
where = ["src"]
include = ["CustomMT*"]


[tool.setuptools]
package-dir = { "" = "src" }





